<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/calendarButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="68dp"
        android:onClick="changeActivity"
        android:text="@string/calendar"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/gamesButton"
        app:layout_constraintEnd_toStartOf="@+id/remindersButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/remindersButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="68dp"
        android:onClick="changeActivity"
        android:text="@string/reminders"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/messagesButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/calendarButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/gamesButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="70dp"
        android:onClick="changeActivity"
        android:text="@string/games"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/passwordManagerButton"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/messagesButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarButton" />

    <Button
        android:id="@+id/messagesButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="70dp"
        android:onClick="changeActivity"
        android:text="Messages"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/profileButton"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gamesButton"
        app:layout_constraintTop_toBottomOf="@+id/remindersButton" />

    <Button
        android:id="@+id/profileButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="104dp"
        android:onClick="changeActivity"
        android:text="Profile"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/passwordManagerButton"
        app:layout_constraintTop_toBottomOf="@+id/messagesButton" />

    <Button
        android:id="@+id/passwordManagerButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="104dp"
        android:onClick="changeActivity"
        android:text="Password Manager"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/profileButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gamesButton" />

</androidx.constraintlayout.widget.ConstraintLayout>