<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".setReminders">

    <Button
        android:id="@+id/btnDone"
        android:layout_width="142dp"
        android:layout_height="77dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="47dp"
        android:onClick="doneButton"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnCancel"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/uiDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDescription" />

    <EditText
        android:id="@+id/uiTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:autofillHints="Title of event"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle" />

    <EditText
        android:id="@+id/uiLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLocation" />

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="218dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uiTitle" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="218dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_of_event"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textDateSelected"
        android:layout_width="218dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:text="Date Selected"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uiSelectDate" />

    <TextView
        android:id="@+id/textTimeStartSelected"
        android:layout_width="160dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="9dp"
        android:text="Time Selected"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uiSelectStartTime" />

    <TextView
        android:id="@+id/textLocation"
        android:layout_width="218dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="19dp"
        android:text="Location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dropdownDuration" />

    <TextView
        android:id="@+id/textDuration"
        android:layout_width="106dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="19dp"
        android:text="Duration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTimeStartSelected" />

    <Spinner
        android:id="@+id/dropdownDuration"
        android:layout_width="333dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="9dp"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDuration" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="142dp"
        android:layout_height="77dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="47dp"
        android:onClick="cancelButton"
        android:text="Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/uiSelectDate"
        android:layout_width="129dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:onClick="selectDateButton"
        android:text="Select Date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uiDescription" />

    <Button
        android:id="@+id/uiSelectStartTime"
        android:layout_width="129dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:onClick="selectTimeButton"
        android:text="Select Time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDateSelected" />

</androidx.constraintlayout.widget.ConstraintLayout>